# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "flowtrace-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flowtrace-core = { path = "../flowtrace-core" }
flowtrace-storage = { path = "../flowtrace-storage" }
flowtrace-index = { path = "../flowtrace-index" }
flowtrace-prompts = { path = "../flowtrace-prompts" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
moka = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
once_cell = "1.19"
dirs = "5.0"
# tokio removed - query engine uses sync storage layer
semver = { version = "1.0", features = ["serde"] }
rand = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
