# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "flowtrace-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core Flowtrace
flowtrace-core = { path = "../flowtrace-core" }
flowtrace-storage = { path = "../flowtrace-storage" }
flowtrace-query = { path = "../flowtrace-query" }
flowtrace-index = { path = "../flowtrace-index" }
sochdb-index = { workspace = true } # For direct access to HNSW types

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
http = "1.0"

# OTLP gRPC Support
tonic = "0.12"
prost = "0.13"
opentelemetry-proto = { version = "0.7", features = ["gen-tonic", "trace"] }
hex = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1.6"

# Serialization
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"

# LLM Integration
reqwest = { version = "0.11", features = ["json", "stream"] }
async-openai = "0.20"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency and compression
dashmap = "5.5"
flate2 = "1.0"
moka = { version = "0.12", features = ["sync"] }
sha2 = "0.10"
blake3 = { workspace = true }
parking_lot = "0.12"

# Authentication
jsonwebtoken = "9.2"
base64 = "0.21"
url = "2.4"
rand = "0.8"
regex = "1.10"
jsonschema = "0.17"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
dirs = "5.0"

# MCP & Knowledge Graph
uuid = { version = "1.6", features = ["v4"] }

# Metrics (optional)
prometheus = { version = "0.13", optional = true }

[features]
default = []
metrics = ["prometheus"]

[dev-dependencies]
tempfile = "3.10"
