# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay-plugins"
version = "0.1.0"
edition = "2021"
description = "Plugin system for Agentreplay - extensible evaluators, providers, and integrations"
authors = ["Agentreplay Contributors"]
license = "AGPL-3.0-or-later"

[dependencies]
# Agentreplay crates
agentreplay-core = { path = "../../agentreplay-core" }
agentreplay-evals = { path = "../../agentreplay-evals" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# File system
notify = { version = "6.0", default-features = false, features = ["macos_kqueue"] }
tempfile = "3.8"
walkdir = "2.4"

# Hashing & security
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Plugin execution (native for now, WASM can be added later)
libloading = "0.8"

# WASM runtime for polyglot plugins
wasmtime = { version = "27.0", features = ["component-model", "async"] }
wasmtime-wasi = "27.0"
wit-bindgen = "0.36"

# HTTP client for plugins
reqwest = { version = "0.12", features = ["json"] }

# Directory management
dirs = "5.0"

# Command detection for bundle plugins
which = "6.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["wasm"]
wasm = []
python = []
