# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "agentreplay"
version = "0.1.0"
edition = "2021"
authors = ["Agentreplay"]
description = "High-performance observability SDK for LLM agents and AI applications"
license = "MIT"
repository = "https://github.com/sochdb/agentreplay"
documentation = "https://docs.rs/agentreplay-client"
readme = "README.md"
keywords = ["llm", "observability", "tracing", "agents", "opentelemetry"]
categories = ["development-tools::debugging", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"
