# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowtrace-plugin-sdk"
version = "0.1.0"
description = "SDK for building Flowtrace plugins in Python"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Flowtrace Contributors", email = "team@flowtrace.dev" }
]
keywords = ["flowtrace", "plugin", "wasm", "evaluator", "llm", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
build = [
    "componentize-py>=0.13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
flowtrace-plugin-build = "flowtrace_plugin.build:main"

[project.urls]
Homepage = "https://flowtrace.dev"
Documentation = "https://docs.flowtrace.dev/plugins/python"
Repository = "https://github.com/sochdb/flowtrace"

[tool.hatch.build.targets.wheel]
packages = ["src/flowtrace_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
