# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "flowtrace-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building Flowtrace plugins in Rust"
authors = ["Flowtrace Contributors"]
license = "Apache-2.0"
repository = "https://github.com/flowtrace/flowtrace"
documentation = "https://docs.flowtrace.dev/plugins/rust"
keywords = ["flowtrace", "plugin", "wasm", "evaluator", "llm"]
categories = ["development-tools", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindgen for component model
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: for plugins that need HTTP
reqwest = { version = "0.12", optional = true, default-features = false }

[features]
default = []
http = ["reqwest"]

[profile.release]
opt-level = "s"
lto = true
